Changed Authority to implement Role based Authority

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,8 +3,11 @@ employee.not.found                           = Employee Not Found
 customer.not.found                           = Customer Not Found
 sql.integrity.constraint.violation.exception = DB Constraint Failed
 max.employee.reached                         = Maximum Employee Reached
+max.customer.reached                         = Maximum Customer Reached
 customer.assignment.failed                   = Customer assignment failed for employee
 customer.not.assigned                        = Customer not assigned
 customer.remove.failed                       = Customer remove failed
 employee.already.subordinate                 = Employee is already a subordinate
 subordinate.not.found                        = Subordinate not found under this employee
+service.not.assigned                         = Service not assigned
+service.remove.failed                        = Service remove failed
