--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,4 @@ employee.already.subordinate                 = Employee is already a subordinate
 subordinate.not.found                        = Subordinate not found under this employee
 service.not.assigned                         = Service not assigned
 service.remove.failed                        = Service remove failed
+department.not.found                         = Department not found.
